--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <div class="center_wrapper">
-            <h1>Enter Access Code:</h1>
+            <h1 style="text-align: center;">Enter Access Code:</h1>
         </div>
         
     </body>
