--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="./stylesheet.css" type="text/css>
+        <link rel="stylesheet" href="./stylesheet.css" type="text/css">
         <title>Process Completed - Part 2</title>
     </head>
     <body>
         <div class="center_wrapper">
-            <h1 style="text-align: center;">Enter Access Code:</h1>
+            <h1>Enter Access Code:</h1>
+            <input type="text">
+            <button type="button">Submit</button>
         </div>
-        
     </body>
 </html>
