--- a/part2.html
+++ b/part2.html
@@ -1,4 +1,9 @@
 <!DOCTYPE html>
 <html>
-    <head>Process Completed - Part 2</head>
+    <head>
+        <title>Process Completed - Part 2</title>
+    </head>
+    <body style="background-color: black;">
+        <p style="color: chartreuse;">Logging in to server...<br>Connected.<br><br>>> list_files<br><br>1 file on disk:<br><br>process_completed.txt<br><br>Open file?<br><button onclick='window.location.replace("https://www.youtube.com/watch?v=dQw4w9WgXcQ")'>Yes</button><button onclick="window.location.href = '/'">No</button></p>
+    </body>
 </html>
